Move daemon config to gradle property