@@ -137,21 +137,6 @@ subprojects {
     if (project.name != "sample" && !project.path.contains("sample") && !project.path.contains("test")) {
       configure<KotlinProjectExtension> {
         explicitApi()
-        kotlinDaemonJvmArgs = listOf(
-          "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-          "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-          "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
-          "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-          "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-          "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-          "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
-          "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-          "--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED ",
-          "--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
-          "--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
-          "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-          "--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-        )
       }
     }
   }
